done with main text, fixing citations

--- a/centrality.tex
+++ b/centrality.tex
@@ -17,7 +17,7 @@ Events in which the ZDC measures more neutrons than expected for a given energy 
           \caption{The correlation of the sum of energies in the ZDC arms vs. the sum of transverse energies in the FCal.
           Multiple \pbpb\ interactions in the same beam crossing with at least one of them being a central collision would deposit large amounts of energy in the FCal and the ZCD, and are seen as the grass near the top right of the figure.
           This is used to identify pileup events.
-           Figure taken from Ref.~\cite{perfPlots}.}
+           Figure from Ref.~\cite{perfPlots}.}
           \label{fig:zdc_fcal}
 \end{figure}
 
@@ -26,7 +26,7 @@ Once pileup events have been identified and removed, the event centrality can be
 This is done by coupling information from the Glauber Model with signals from the ZDC and FCal \cite{ATLAS:2016tor, Aaboud:2018ves}.
 The centrality of an event can be mapped to the charged particle multiplicity $N_{\rm ch}$ using the Glauber Model as was shown in Figure~\ref{fig:cent_estimate}.
 It can also be seen from Figure~\ref{fig:nch_fcal} that the charged particle multiplicity is strongly correlated with \ETfcal.
-Then an MC Glauber simulation can be used to describe the \ETfcal\ distribution shown in Figure~\ref{fig:fcal_distr}, and divide it into percentiles \cite{ATLAS:2011ah}.
+Then an MC Glauber simulation can be used to describe the distribution of transverse energy in the FCal, \ETfcal, shown in Figure~\ref{fig:fcal_distr}, and divide it into percentiles \cite{ATLAS:2011ah}.
 The 0--10\% centrality corresponds to most central collisions with the maximum overlap between the colliding nuclei, while the 90--100\% corresponds to the most peripheral collisions with the least overlap between the colliding nuclei.
 Since the energy in the barrel region ($|\eta| < 3.2$) is highly correlated with the energy in the FCal ( $3.2 < |\eta| < 4.9$) as shown in Figure~\ref{fig:fcal_barrel}, using different regions of the detector to estimate event centrality and conduct measurements ensures a consistent centrality determination while avoiding autocorrelations in the analysis.
 
@@ -48,10 +48,10 @@ Since the energy in the barrel region ($|\eta| < 3.2$) is highly correlated with
           \label{fig:fcal_distr}
 \end{subfigure}
 \caption{(Left) Charged particle multiplicity $N_{\rm ch}^{\rm sel}$ versus the total transverse energy in the FCal, \ETfcal.
-Taken from Ref.~\cite{perfPlots}.
+Figure from Ref.~\cite{perfPlots}.
 (Right) The \ETfcal\ distribution for events selected by the minimum bias trigger along with the centrality percentiles.
 Also shown are the number of events over the 0--1\% and 0--0.1\% centrality intervals selected by the ultra-central triggers.
-Figure taken from Ref.~\cite{Aaboud:2018ves}.
+Figure from Ref.~\cite{Aaboud:2018ves}.
 Both plots are for \pbpb\ collisions with $\sqrtsnn = 5.02$ TeV.}
 \label{}
 \end{figure}
@@ -61,7 +61,7 @@ Both plots are for \pbpb\ collisions with $\sqrtsnn = 5.02$ TeV.}
 	\centering
         \includegraphics[width=0.5\textwidth]{figures/setup/fcal_barrel}
           \caption{Correlation of the total energy in the calorimeter in the interval of $|\eta| < 3.2$ with the total energy measured in the forward calorimeters for \pbpb\ collisions with $\sqrtsnn = 5.02$ TeV.
-          Taken from Ref.~\cite{perfPlots}.}
+          Figure from Ref.~\cite{perfPlots}.}
           \label{fig:fcal_barrel}
 \end{figure}
 
