--- a/jetModels.tex
+++ b/jetModels.tex
@@ -1,11 +1,24 @@
 % !TEX encoding = UTF-8 Unicode
 % !TEX root = thesis-ex.tex
 
-This chapter shall discuss a few models that have been used to explain the data, looking in particular at the following: Effective Quenching (EQ), Soft Collinear Effective Theory (SCET), Hybrid Model, and Jet Fluid Model. These models form the backdrop in which the main thesis analysis was conducted.
+While there are a number of different observables that can be measured in heavy ion collisions, the underlying goal of these measurements is to characterize the QGP.
+This makes jet energy loss models that combine dynamics of the jet as well as the QGP invaluable.
+Since different jet measurements come with their own set of measurement biases and have different sensitivities, it is vital that any viable model be able to describe a variety of observables.
+Models can also help guide experimentalists in their searches and suggest new directions of exploration.
+Measurements can then be done to constrain such models, helping further describe the jet-QGP interaction.
 
-\section{Effective Quenching}
-\input{model_effectiveQuenching.tex}
-\label{sec:eff_quench}
+%In the case of jet energy loss, If a model can predict where the lost energy is redistributed, it is possible for experimentalists to measure an observable that would be sensitive to such effects, helping constrain the model.
+%This sets up a healthy feedback loop between the theory and experiemnet communities.
+
+%Mearuements of energy loss have to be coupled with models that describe the loss but also identify where the energy is redistributed. this makes measurements that are able to identify the different 
+%Models investigating jet energy loss do not have to stop at just the loss, but also have to have a description of where the lost energy went.
+%This makes models like the jet fluid model
+%
+%There is a constant feedback between the experimental measurements and models that attempt to describe them.
+This chapter specifically discusses three different models: the Jet Fluid model, the Hybrid Model, and the Effective Quenching model.
+These were chosen because they have been used to describe a wide variety of observables including the jet \RAA, jet fragmentation, and the jet shape.
+In particular, the Jet Fluid model and Hybrid model incorporate a rigorous description of the interactions between the jet and the QGP and describe the radial dependence of the modification of charged particles in a jet, the central topic of this thesis. 
+The Effective Quenching model is more phenomenological and shows agreement with measured data using only an intuitive functional form for energy loss.
 
 \section{Jet Fluid model}
 \input{model_jetFluid.tex}
@@ -15,6 +28,8 @@ This chapter shall discuss a few models that have been used to explain the data,
 \input{model_hybridModel.tex}
 \label{sec:hybrid_model}
 
-
+\section{Effective Quenching}
+\input{model_effectiveQuenching.tex}
+\label{sec:eff_quench}
 
 
