--- a/jet_calibration.tex
+++ b/jet_calibration.tex
@@ -10,8 +10,8 @@ This poses a challenge for heavy ion collisions because unlike in \pp\ collision
 Here the cross-calibration procedure accounts for differences in the jet reconstruction procedure in heavy ion collisions and \pp\ collisions, and enables the usage of the \insitu\ corrections from \pp\ collisions.
 
 The validity of the jet reconstruction and calibration procedure can be tested by evaluating the jet energy scale and jet energy resolution.
-These are the mean and width respectively of the jet response distribution that is given by $\ptreco / \pttruth$ in MC and are shown in Figure~\ref{fig:jes_jer}.
-\ptreco\ is the reconstructed jets transverse momentum, while \pttruth\ is the transverse momentum of the corresponding ``truth'' jet.
+These are the mean and width respectively of the jet response distribution that is given by $\ptreco / \pttruth$ in MC, where \ptreco\ is the reconstructed jets transverse momentum, while \pttruth\ is the transverse momentum of the corresponding ``truth'' jet.
+This is shown in Figure~\ref{fig:jes_jer}.
 
 
 \begin{figure}[htbp!]
@@ -20,7 +20,7 @@ These are the mean and width respectively of the jet response distribution that 
 	\caption{
 	The Jet Energy Scale (left) and Jet Energy Resolution (right) as a function of \pttruth.
 	Both are for jets with $|y| < 2.8$. The different curves are for \pp\ and varying \pbpb\ centrality.
-	Figures taken from \cite{2019108}.}	
+	Figures from Ref.~\cite{2019108}.}	
 	\label{fig:jes_jer}%
 \end{figure}
 The JES is seen to be almost unity within 1\%. across a broad kinematic range.
