--- a/jet_ff.tex
+++ b/jet_ff.tex
@@ -21,7 +21,7 @@ The \Dpt\ distribution is shown in Figure~\ref{fig:jetff_dpt}.
 \caption{(Left) The \Dpt\ distributions in \pp\ as a function of charged-particle \pt\ for different \ptjet\ selections and for jet rapidity $|y| < 2.1$.
 (Right) The \Dpt\ distributions in \pbpb\ as a function of charged-particle \pt\ for different centrality selections and for jet rapidity $|y| < 2.1$.
 The error bars represent statistical uncertainties while the shaded boxes represent systematic uncertainties.
-Figure taken from \cite{PhysRevC.98.024908}.}
+Figures from Ref.~\cite{PhysRevC.98.024908}.}
 \label{fig:jetff_dpt}
 \end{center}
 \end{figure}
@@ -32,7 +32,7 @@ Figure taken from \cite{PhysRevC.98.024908}.}
 \includegraphics[width=0.65\textwidth]{figures/jetMeasurements/jetff_rdz_rdpt}
 \caption{The modifications to the (left) \Dz\ and (right) \Dpt\ distributions in (top) 0--10\% central and (bottom) peripheral \pbpb\ compared to \pp\ as a function of charged-particle $z$ and \pt\ respectively.
 The error bars represent statistical uncertainties while the shaded boxes represent systematic uncertainties.
-Figures taken from \cite{PhysRevC.98.024908}.}
+Figures taken from Ref.~\cite{PhysRevC.98.024908}.}
 \label{fig:jetff_rdz_rdpt}
 \end{center}
 \end{figure}
@@ -63,7 +63,7 @@ This excess is even seen in the peripheral \pbpb\ collisions, though it is a lot
 %\includegraphics[width=0.75\textwidth]{figures/jetMeasurements/jetff_jetpt_dep}
 %\caption{The \ptjet\ dependence of the \Rdz\ (left) and \Rdpt\ (right) distributions in 0--10\% central \pbpb\ compared to \pp\ collisions.
 %The error bars represent statistical uncertainties while the shaded boxes represent systematic uncertainties.
-%Figure taken from \cite{PhysRevC.98.024908}.}
+%Figure taken from Ref.~\cite{PhysRevC.98.024908}.}
 %\label{fig:jetff_jetpt_dep}
 %\end{center}
 %\end{figure}
@@ -75,7 +75,7 @@ This excess is even seen in the peripheral \pbpb\ collisions, though it is a lot
 \caption{The number of extra particles that carry $1<\pt<4$ GeV  in \pbpb\ compared to \pp.
 The different colors represent different centrality selections.
 The error bars represent statistical uncertainties while the shaded boxes represent systematic uncertainties.
-Figure taken from \cite{PhysRevC.98.024908}.}
+Figure from Ref.~\cite{PhysRevC.98.024908}.}
 \label{fig:jetff_nch}
 \end{center}
 \end{figure}
@@ -88,7 +88,7 @@ These comparisons are shown in Figure~\ref{fig:jetff_rdz_theory}, and are discus
 \includegraphics[width=0.75\textwidth]{figures/jetMeasurements/jetff_rdz_theory}
 \caption{The \Rdz\ distributions compared to the EQ and Hybrid models (left) and SCET (right).
 The error bars represent statistical uncertainties while the shaded boxes represent systematic uncertainties.
-Figure taken from \cite{PhysRevC.98.024908}.}
+Figure taken from Ref.~\cite{PhysRevC.98.024908}.}
 \label{fig:jetff_rdz_theory}
 \end{center}
 \end{figure}
