--- a/jet_raa.tex
+++ b/jet_raa.tex
@@ -12,28 +12,30 @@ This is defined as:
 \dfrac{d^2 N_{\rm jet}}{d\pt dy} \right|_{\rm cent}}{ \langle T_{\rm AA} \rangle \left.
 \dfrac{d^2\sigma_{\rm jet}}{d\pt dy} \right|_{\rm pp}}
 \end{align}
-where \TAA\ is the nuclear thickness function and accounts for the geometric enhancement between \pp\ and \pbpb\ as discussed in Section~\ref{sec:HICollisions} and \cite{doi:10.1146/annurev.nucl.57.090506.123020}.
+where \TAA\ is the nuclear thickness function and accounts for the geometric enhancement between \pp\ and \pbpb\ as discussed in Section~\ref{sec:qgp_hi} and \cite{doi:10.1146/annurev.nucl.57.090506.123020}.
 
+This measurement includes considers jets from both charged particles and neutral $\pi^0$s.
 The jet spectrum in \pbpb\ events, as well as the jet \RAA\ for central \pbpb\ is shown in Figure~\ref{fig:jet_raa_alice}.
+It can be seen that the most central collisions show a clear suppression with an $\RAA \approx 0.25$ at jet $\pt\ 30$ GeV.
+The \RAA\ value slowly evolves with jet \pt\ and rises to 0.5 at jet $\pt = 100$ GeV.
+This modification becomes smaller for more peripheral collisions.
+
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[width=0.85\textwidth]{figures/jetMeasurements/jet_raa_alice}
 \caption{(Left) The inclusive jet cross section as a function of jet \pt\ in 0--10\% central \pbpb\ collisions at $\sqrtsnn = 2.76$ TeV.
 The band around the data points represents the systematic uncertainty.
 (Right) The \RAA\ for 0--10\% central \pbpb\ collisions.
-Figure taken from \cite{Reed_2013}.}
-\label{fig:jet_yields}
+Figure from Ref.~\cite{Reed_2013}.}
+\label{fig:jet_raa_alice}
 \end{center}
 \end{figure}
 
-It can be seen that the most central collisions show a clear suppression with an $\RAA \approx 0.25$ at jet $\pt\ 30$ GeV.
-The \RAA\ value slowly evolves with jet \pt\ and rises to 0.5 at jet $\pt = 100$ GeV.
-This modification becomes smaller for more peripheral collisions.
 
-These observations are consistent with results from ATLAS and CMS \cite{Aad:2014bxa, 2019108, Khachatryan:2016jfl}.
+These observations are consistent with results from ATLAS and CMS \cite{Aad:2014bxa, 2019108, Khachatryan:2016jfl, Verweij:2012ch}.
 The ATLAS results at $\sqrtsnn = 5.02$ TeV are shown in Figure~\ref{fig:jetraa_atlas}.
 The higher collision energy allows access to higher \pt\ jets.
-The smooth centrality dependence can be more clearly seen in Figure~\ref{fig:raa_centDep_atlas}, where \RAA\ is shown as a function of \ANpart\ for jets the 100--126 GeV and 200--251 GeV ranges.
+The smooth centrality dependence can be more clearly seen in Figure~\ref{fig:raa_centDep_atlas}, where \RAA\ is shown as a function of \ANpart\ for jets the \mbox{100--126 GeV} and \mbox{200--251 GeV} ranges.
 The magnitude of the suppression is also seen to significantly depend on jet \pt\ for $\ANpart \geq 50$.
 
 
@@ -46,7 +48,7 @@ The magnitude of the suppression is also seen to significantly depend on jet \pt
 %\caption{(Left) The inclusive jet cross section in \pp\ collisions as a function of jet \pt\ in different $|y|$ intervals scaled by successive powers of $10^2$ for visibility.
 %(Right) Per event inclusive jet yield in \pbpb\ collisions normalized by $\langle \TAA \rangle$ as a function of jet \pt\ in different centrality intervals scaled by successive powers of $10^2$ for visibility.
 %The solid lines represent the cross section from \pp\ data at the same rapidity interval scaled by the same $10^2$ factor.
-% Figure taken from \cite{2019108}.}
+% Figure taken from Ref.~\cite{2019108}.}
 %\label{fig:jet_yields}
 %\end{center}
 %\end{figure}
@@ -71,9 +73,8 @@ The magnitude of the suppression is also seen to significantly depend on jet \pt
 \caption{}
 \label{fig:raa_centDep_atlas}
 \end{subfigure}
-\caption{(Left) The \RAA\ distributions as a function of jet \pt\ for different centrality bins and jet rapidity $|y| < 2.8$.
-(Right) The \RAA\ distributions as a function of jet $\langle \Npart \rangle$ for different jet \pt\ bins and jet rapidity $|y| < 2.8$.
-Figures taken from \cite{2019108}}
+\caption{The \RAA\ distributions as a function of (left) jet \pt\ for different centrality bins and (right) $\langle \Npart \rangle$ for different jet \pt\ bins, for jet rapidity $|y| < 2.8$.
+Figures from Ref.~\cite{2019108}.}
 \label{fig:atlas_jet_raa}
 \end{figure}
 
@@ -84,7 +85,7 @@ Figures taken from \cite{2019108}}
 %\includegraphics[width=\textwidth]{figures/jetMeasurements/raa}
 %\caption{The \RAA\ distributions as a function of jet \pt\ for different centrality bins and jet rapidity $|y| < 2.8$.
 %The error bars represent statistical uncertainties while the shaded boxes represent systematic uncertainties.
-%Figure taken from \cite{2019108}.}
+%Figure taken from Ref.~\cite{2019108}.}
 %\label{fig:raa}
 %  \end{minipage}
 % \qquad  \qquad  \qquad
@@ -92,7 +93,7 @@ Figures taken from \cite{2019108}}
 %\includegraphics[width=\textwidth]{figures/jetMeasurements/raa_centDep}
 %\caption{The \RAA\ distributions as a function of jet \pt\ for different centrality bins and jet rapidity $|y| < 2.8$.
 %The error bars represent statistical uncertainties while the shaded boxes represent systematic uncertainties.
-%Figure taken from \cite{2019108}.}
+%Figure taken from Ref.~\cite{2019108}.}
 %\label{fig:raa_centDep}
 %  \end{minipage}
 %  \end{center}
@@ -104,7 +105,7 @@ Figures taken from \cite{2019108}}
 %\includegraphics[width=0.55\textwidth]{figures/jetMeasurements/raa}
 %\caption{The \RAA\ distributions as a function of jet \pt\ for different centrality bins and jet rapidity $|y| < 2.8$.
 %The error bars represent statistical uncertainties while the shaded boxes represent systematic uncertainties.
-%Figure taken from \cite{2019108}.}
+%Figure taken from Ref.~\cite{2019108}.}
 %\label{fig:raa}
 %\end{center}
 %\end{figure}
@@ -115,7 +116,7 @@ Figures taken from \cite{2019108}}
 %\includegraphics[width=0.55\textwidth]{figures/jetMeasurements/raa_centDep}
 %\caption{The \RAA\ distributions as a function of jet \pt\ for different centrality bins and jet rapidity $|y| < 2.8$.
 %The error bars represent statistical uncertainties while the shaded boxes represent systematic uncertainties.
-%Figure taken from \cite{2019108}.}
+%Figure taken from Ref.~\cite{2019108}.}
 %\label{fig:raa_centDep}
 %\end{center}
 %\end{figure}
