--- a/jet_xj.tex
+++ b/jet_xj.tex
@@ -2,7 +2,7 @@
 % !TEX root = thesis-ex.tex
 
 This section will discuss the dijet balance as measured by the ATLAS detector for \pbpb\ collisions at $\sqrtsnn = 2.76$ TeV \cite{Aaboud:2017eww}.
-The dijet imbalance can be expressed in terms of $x_J$ defined as
+The dijet imbalance can be expressed in terms of $x_J$ defined as:
 
 \begin{align}
 x_J =  \frac{\pt_2}{\pt_1}
@@ -18,7 +18,10 @@ This reflects the fact that the effects of jet quenching are minimal and the hig
 The dijet yields in peripheral \pbpb\ collisions are similar to the distributions from the \pp\ data, showing that the effects of quenching are smaller.
 On the other hand, dijet yields in central \pbpb\ collisions are significantly broadened, reflecting the maximal  of jet quenching.
 This is consistent with the picture of the individual jets in the dijet pair traversing different lengths in the QGP and hence losing different amounts of energy.
-In fact, the distribution for \pbpb\ data is peaked at $x_J = 0.5$, implying a loss of 50\% of the jet \pt.
+In fact, the distribution for \pbpb\ data is peaked at $x_J = 0.5$, implying that the jets are highly unbalanced.
+It is further seen that higher \pt\ jets have a narrower $x_J$ distribution.
+This suggests that the fractional energy loss decreases with increasing jet \pt. 
+Similar jet asymmetry has been observed at both RHIC and the LHC \cite{PhysRevLett.119.062301, Aad:2010bu, Chatrchyan:2012gt, Chatrchyan:2011sx}.
 
 \begin{figure}[htbp]
 \begin{center}
@@ -27,14 +30,16 @@ In fact, the distribution for \pbpb\ data is peaked at $x_J = 0.5$, implying a l
 The different panels are for (top) central and (bottom) peripheral collisions in (left) $100 < \pt_1 < 126$ GeV and (right) $\pt_1 > 200 $ GeV.
 The \pp\ data is the same in all panels.
 The statistical uncertainties are indicated by the bars while the boxes indicate the systematic uncertainties.
-Figures taken from \cite{Aaboud:2017eww}.}
+Figures from Ref.~\cite{Aaboud:2017eww}.}
 \label{fig:xJ}
 \end{center}
 \end{figure}
 
-It is further seen that narrower jets are flatter than wider jets.
-%Further measurements of $R = 0.3$ jets are shown in Figure~\ref{fig:xJ_R03}.
-This is consistent with the expectation that the transverse momenta correlation between the dijet pair is weaker for jets with smaller radii due to radiation that is outside the nominal jet cone.
+
+
+
+
+
 
 %These distributions are significantly flatter than the ones for $R=0.4$ jets, an observation that is consistent with the expectation that the transverse momenta correlation between the dijet pair is weaker for jets with smaller radii due to radiation that is outside the nominal jet cone.
 
@@ -45,7 +50,7 @@ This is consistent with the expectation that the transverse momenta correlation 
 %The different panels are for different, $\pt_1$ ranges (top left to bottom right) central and (bottom) peripheral collisions.
 %The \pbpb\ data is in red circles while the \pp\ data is in blue diamonds and is the same in all panels.
 %The statistical uncertainties are indicated by the bars while the boxes indicate the systematic uncertainties.
-%Figures taken from \cite{Aaboud:2017eww}.}
+%Figures taken from Ref.~\cite{Aaboud:2017eww}.}
 %\label{fig:xJ_R03}
 %\end{center}
 %\end{figure}
