--- a/mainAnalysis.tex
+++ b/mainAnalysis.tex
@@ -16,7 +16,7 @@ The measured yields are defined as:
 
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=0.7\textwidth]{figures/main/general/cartoon_dptr}
+\includegraphics[width=0.6\textwidth]{figures/main/general/cartoon_dptr}
 \caption{A schematic showing the distribution of tracks inside and outside a jet cone of radius $R$.}
 \label{fig:cartoon_dptr}
 \end{figure}
@@ -44,7 +44,7 @@ allow for measuring the absolute differences in charged-particle yields between 
 The following sections describe all details of this analysis as follows:
 
 \begin{itemize}
-%\item The datasets used for this analysis are discussed in Section~\ref{sec:used_data}
+\item The datasets and event selection criteria used for this analysis are discussed in Section~\ref{sec:used_data}
 %\item The different event selection criteria are discussed in \ref{sec:event_selection}
 \item The cuts and corrections applied in the analysis procedure are discussed in  \ref{sec:cuts_corrections}
 \item The various sources of systematic uncertainties and their sizes are discussed in \ref{sec:systematic}
@@ -56,9 +56,9 @@ The following sections describe all details of this analysis as follows:
 %\label{sec:trkjet_corr_measurement}
 %\input{trkjet_corr_measurement.tex}
 %
-%\section{Input Data}
-%\label{sec:used_data}
-%\input{used_data.tex}
+\section{Datasets and Event Selection}
+\label{sec:used_data}
+\input{used_data.tex}
 %
 %\section{Event Selection }
 %\label{sec:event_selection}
