--- a/model_effectiveQuenching.tex
+++ b/model_effectiveQuenching.tex
@@ -4,7 +4,7 @@
 This discussion is based on the model introduced in Ref.
 \cite{Spousta:2015fca}.
 This phenomenological model emphasizes the jet \pt\ dependence of the quark to gluon fraction and the difference between quark-jet and gluon-jet quenching.
-It uses an ``extended'' power law parameterization of the high-\pt\ hadron spectra coupled with a quenching that is based on a non-constant fractional energy loss.
+It uses an ``extended'' power law parameterization of the high-\pt\ hadron spectra coupled with a quenching that is based on a jet \pt\ dependent fractional energy loss.
 This model considers the different color charges carried by quarks and gluons and their different splitting functions, and assumes that gluon jets lose energy at a rate 9/4 times higher than quark jets.
 The key assumption of the model are:
 \begin{itemize}
@@ -57,7 +57,7 @@ The points are from \pythia8 simulations and the lines are fits to those points 
 \label{fig:gluon_fragmentation}
 \end{subfigure}
 \caption{Fits to quark fractions and fragmentation functions from \pythia8.
- Figure taken from \cite{Spousta:2015fca}.}
+ Figures from Ref.~\cite{Spousta:2015fca}.}
 \label{fig:EQ_pp_models}
 \end{figure}
 
@@ -91,7 +91,7 @@ While the fits agree with the data by definition, the robustness of the model ca
 %\includegraphics[width=0.55\textwidth]{figures/jetMeasurements/EQ_fitQuality}
 %\caption{The extracted values of $\alpha$ and $s'$ as a function of \Npart.
 %The first minimization shows fluctuations for $\alpha$ around 0.55, which was then fixed for the second minimization to give an $s'$ that linearly depends on \Npart.
-%Figure taken from \cite{Spousta:2015fca}}
+%Figure taken from Ref.~\cite{Spousta:2015fca}}
 %\label{fig:eq_param}
 %\end{center}
 %\end{figure}
@@ -116,7 +116,7 @@ The different panels are different centrality intervals.}
 \label{fig:EQ_FF}
 \end{subfigure}
 \caption{A comparison of measured data, MC, and the analytic calculation of the EQ model.
-Figure taken from \cite{Spousta:2015fca}.}
+Figures from Ref.~\cite{Spousta:2015fca}.}
 \label{fig:EQ_modification}
 \end{figure}
 
