--- a/model_hybridModel.tex
+++ b/model_hybridModel.tex
@@ -3,7 +3,7 @@
 
 This discussion is based on the work in Refs.~\cite{Casalderrey-Solana:2014bpa, Hulcher:2017cpt, Casalderrey-Solana:2016jvj} and describes jet quenching using a hybrid strong/weak model.
 It uses perturbative QCD to describe the weakly coupled hard process of jet production and holographic calculations of the energy loss of energetic probes to model the strong coupling between the probe and the plasma \cite{Chesler:2015nqz, Chesler:2014jva}.
-This is a combination of approaches that focus on the following extreme limits: a weakly coupled system at unrealistically high temperatures that can be treated perturbatively \cite{Jacobs:2004qv, Majumder:2010qh} and a system where the coupling constant is large at all energy scales and Gauge/string duality is applicable \cite{CasalderreySolana:2011us}.
+%This is a combination of approaches that focus on the following extreme limits: a weakly coupled system at unrealistically high temperatures that can be treated perturbatively \cite{Jacobs:2004qv, Majumder:2010qh} and a system where the coupling constant is large at all energy scales and gauge/string duality is applicable \cite{CasalderreySolana:2011us}.
 In this model, the jet evolves in space time with the lifetime of the parton in the shower being given by \cite{CasalderreySolana:2011gx}.
  
 
@@ -49,11 +49,11 @@ The \Lres\ parameter has the constraint $ 1/(\pi T) < \Lres < 2 /(\pt T$ based o
 
 \begin{figure}[htbp]
 \begin{center}
-\includegraphics[width=0.55\textwidth]{figures/jetMeasurements/HM_lres}
+\includegraphics[width=0.45\textwidth]{figures/jetMeasurements/HM_lres}
 \caption{A schematic illustrating the resolving power of the QGP.
 The daughter partons $2$ and $3$ that come from $1$ need to be separated by \Lres\ before they are treated individually by the plasma.
 Prior to that separation, they are treated as one effective parton.
-Figure taken from \cite{Hulcher:2017cpt}.}
+Figure from Ref.~\cite{Hulcher:2017cpt}.}
 \label{fig:hm_lres}
 \end{center}
 \end{figure}
@@ -71,7 +71,7 @@ This is consistent with the expectation that wider jets lose more energy.
 \cite{Khachatryan:2016jfl}.
 The different colors correspond to different jet radii.
 The Hybrid Model is fit to the 100--110 GeV point from the data, giving rise to the colored bands.
-Figure taken from \cite{Hulcher:2017cpt}.
+Figures from Ref.~\cite{Hulcher:2017cpt}.
 }
 \label{fig:hm_fitting}
 \end{center}
@@ -90,7 +90,7 @@ Figures~\ref{fig:hm_ff} and \ref{fig:hm_jetshape} show a comparison of the measu
 \cite{Chatrchyan:2014ava} compared to the predictions of the hybrid model.
 The predictions are shown without (left) and with (right) the effect of the wake from the QGP responding to the jet.
 The different colors correspond to different \Lres\ parameters.
-Figure taken from \cite{Hulcher:2017cpt}.}
+Figure taken from Ref.~\cite{Hulcher:2017cpt}.}
 \label{fig:hm_ff}
 \end{subfigure} \\ \\ \\
 \begin{subfigure}{1\textwidth}
@@ -100,11 +100,11 @@ Figure taken from \cite{Hulcher:2017cpt}.}
 \cite{Chatrchyan:2013kwa} compared to the predictions of the hybrid model.
 The predictions are shown without (left) and with (right) the effect of the wake from the QGP responding to the jet.
 The different colors correspond to different \Lres\ parameters.
-Figure taken from \cite{Hulcher:2017cpt}.}
+Figure taken from Ref.~\cite{Hulcher:2017cpt}.}
 \label{fig:hm_jetshape}
 \end{subfigure}
 \caption{A comparison of measured data, MC, and the analytic calculation of the EQ model.
-Figure taken from \cite{Spousta:2015fca}}
+Figures from Ref.~\cite{Spousta:2015fca}.}
 \label{fig:HM_modification}
 \end{figure}
 
