--- a/model_jetFluid.tex
+++ b/model_jetFluid.tex
@@ -43,7 +43,7 @@ The ``V'' shaped feature seen is the mach cone that is induced by the parton as 
 \includegraphics[width=0.85\textwidth]{figures/jetMeasurements/JF_snapshot}
 \caption{(Top) The time evolution of the energy density of the quark gluon plasma with a jet propagating through it.
 (Bottom) The time evolution of the energy density in the event after the energy density of the QGP has been subtracted out.
-Figure taken from \cite{Tachibana:2017syd}.}
+Figure from Ref.~\cite{Tachibana:2017syd}.}
 \label{fig:jf_snapshot}
 \end{center}
 \end{figure}
@@ -62,14 +62,14 @@ This is a result of the jet being highly collimated, such that while an increase
   \begin{minipage}[b]{0.43\textwidth}
 \includegraphics[ width=\textwidth]{figures/jetMeasurements/JF_energyLoss}
 \caption{(Top) The energy lost by a jets of different radii as a function of their initial energy in central \pbpb\ collisions at \sqrtsnn = 2.76 TeV.
-Figure taken from \cite{Tachibana:2017syd}.}
+Figure from Ref.~\cite{Tachibana:2017syd}.}
 \label{fig:jf_energyLoss}
   \end{minipage}
  \qquad  \qquad  \qquad
   \begin{minipage}[b]{0.43\textwidth}
 \includegraphics[width=\textwidth]{figures/jetMeasurements/JF_RAA}
 \caption{The jet \RAA\ measured by CMS \cite{Khachatryan:2016jfl} and compared to the Jet-Fluid model with and without the hydro dynamic contribution.
-Figure taken from \cite{Tachibana:2017syd}.}
+Figure from Ref.~\cite{Tachibana:2017syd}.}
 \label{fig:jf_raa}
   \end{minipage}
   \end{center}
@@ -81,7 +81,7 @@ Figure taken from \cite{Tachibana:2017syd}.}
 %\begin{center}
 %\includegraphics[width=0.45\textwidth]{figures/jetMeasurements/JF_energyLoss}
 %\caption{(Top) The energy lost by a jets of different radii as a function of their initial energy in central \pbpb\ collisions at \sqrtsnn = 2.76 TeV.
-%Figure taken from \cite{Tachibana:2017syd}.}
+%Figure taken from Ref.~\cite{Tachibana:2017syd}.}
 %\label{fig:jf_energyLoss}
 %\end{center}
 %\end{figure}
@@ -95,7 +95,7 @@ Including the hydrodynamic contribution decreases the energy loss, hence increas
 %\caption{The nuclear modification factor \RAA\ as a function of jet \pt\ as determined by the Jet-Fluid model and compared to the data measured by CMS \cite{Khachatryan:2016jfl}.
 %The different colors represent different sized jets, with the dashed lines showing the modeled \RAA\ without the hydro-contribution.
 %There is good agreement within the large uncertainties in the data.
-%Figure taken from \cite{Tachibana:2017syd}.}
+%Figure taken from Ref.~\cite{Tachibana:2017syd}.}
 %\label{fig:jf_raa}
 %\end{center}
 %\end{figure}
@@ -111,14 +111,15 @@ The modification in the jet structure then can be defined as $R_{\rm AA}^\rho = 
 %\begin{align}
 %R_{\rm AA}^\rho = \dfrac{\rho_{\rm AA} (r) }{\rho_{\rm pp} (r) }
 %\end{align}
-A comparison of the jet shape variable $\rho$ and its modification $R_{\rm AA}^\rho$ to data measured by CMS is shown in Figure~\ref{fig:JF_jetShapemodel}.
-The individual shower and hydro contributions are seen in Figure~\ref{fig:jf_jetshape}.
+A comparison of the jet shape variable $\rho$ and its modification $R_{\rm AA}^\rho$ to data measured by CMS is seen in Figure~\ref{fig:JF_jetShapemodel}.
+The shower and hydro contributions are shown individually.
 These indicate that the shower contribution to the jet shape variable is falls steeply as a function of distance from the jet axis while the hydro contribution is fairly constant at large distances.
 This is because the energy loss from the shower is carried away by the jet induced flow to large angles.
-The $R_{\rm AA}^\rho$ distribution in Figure~\ref{fig:jf_jetshapemod}, shows that the core is largely unmodified while the outer part of the jet is broadened.
+The $R_{\rm AA}^\rho$ distribution further shows that the core is largely unmodified while the outer part of the jet is broadened.
 The hydro-contribution mainly has an effect at larger distances from the jet axis.
 This is consistent with the cone-size dependence seen in Figure~\ref{fig:jf_energyLoss}.
 
+This model is particularly useful because it identifies both the effect of the medium on the jet, as well as the effect of the jet on the medium.
 
 \begin{figure}
 \begin{subfigure}{.45\textwidth}
@@ -135,8 +136,8 @@ The shower (blue) and hydro (orange) contributions to the jet shape are highligh
 The dashed line shows the modeled modification without the hydro-contribution.}
 \label{fig:jf_jetshapemod}
 \end{subfigure}
-\caption{Fits to CMS data.
-Figures taken from \cite{Tachibana:2017syd}.}
+\caption{CMS data fit to calculations from the Jet Fluid model.
+Figures from Ref.~\cite{Tachibana:2017syd}.}
 \label{fig:JF_jetShapemodel}
 \end{figure}
 
