--- a/qgp.tex
+++ b/qgp.tex
@@ -4,12 +4,14 @@ Its study is motivated by the fact that is the only way to access the dynamics o
 Moreover, its thermodynamic properties are of particular interest since it filled the early universe a few microseconds after the Big Bang \cite{PhysRevLett.34.1353}.
 The QGP also forms the core of neutron-stars \cite{Linde_1979} and the recent detection of gravitational waves from a neutron-star merger \cite{PhysRevLett.119.161101} has opened new avenues of investigation \cite{Han:2018mtj, PhysRevD.99.023009, PhysRevLett.122.061101}.
 These studies have the potential to provide information into the nuclear equation of state since the dynamics of the merger are sensitive to the behavior of extremely dense nuclear matter \cite{PhysRevD.86.063001}.
-The increase in temperatures and density during the merger results in different pre- and post-merger signals of gravitational-waves that suggest a signature of a first-order hadron-quark phase transition at extreme densities \cite{PhysRevLett.122.061102}.
-Colliders like RHIC and the LHC on the other hand probe regions that have comparitively low baryon densities.
+The increase in temperatures and densities in merging neutron stars allows for probing different regions of the QCD phase diagram.
+In particular, differences in gravitational-waves from these systems before and after the merger can be used to provide an observable signature of a first order phase transition \cite{PhysRevLett.122.061102}.
+Colliders like RHIC and the LHC on the other hand probe regions that have near zero low baryon densities.
 Lattice QCD calculations in these regions show that the transition between a hadronic gas and the QGP occurs at a temperature of approximately 160 MeV and corresponds to an energy density of 0.5 GeV/fm$^3$ \cite{Borsanyi:2010bp}.
 This is a smooth crossover that spans a 20--30 MeV temperature range, and can be seen in the QCD phase diagram shown in Figure~\ref{fig:qcd_phase}.
+%At lower temperatures and higher values of baryon densities, calculations suggest a presence of a first-order phase transition \cite{PhysRevD.78.074507}.
 This phase diagram shows the transition between free quarks and gluons within the QGP and the confined quarks and gluons within hadrons, as a function of temperature $T$ and baryon chemical potential $\mu$.
-% matter and had   at $\mu = 0$ is applicable \cite{Aoki:2006we}.
+
 
 \begin{figure}[htbp]
 \begin{center}
@@ -22,7 +24,7 @@ Figure from from Ref.~\cite{Kronfeld:2012uk}.}
 \end{figure}
 
 When formed in a heavy ion collision, this state of matter exists for 1-10 fm/c, depending on the collision energy \cite{doi:10.1146/annurev.nucl.46.1.71}.
-Thermal photons from the QGP reveal that it reaches temperatures of 300--600 MeV in central collisions at 200 GeV \cite{PhysRevLett.104.132301} and 2.76 TeV \cite{2016235}, showing very little collision energy dependence.
+Hydrodynamic models of photon emission can be used to describe data measured at both RHIC \cite{PhysRevLett.104.132301} and LHC \cite{2016235} energies and suggest that the initial temperature of the QGP is 300--600 MeV \cite{PhysRevC.81.034911}.
 As the QGP cools via expansion, its temperature drops below the critical temperature of QCD phase transitions and it forms a hadron gas.
 This process, referred to as a chemical freeze-out, occurs at about 160 MeV \cite{Fodor_2004, ADAMS2005102, PhysRevC.93.024917}.
 The hadrons formed in this stage continue to interact with each other, but have energies below the threshold for inelastic particle production, resulting mainly in modifications to their momentum spectra.
@@ -69,7 +71,7 @@ These observations were seen in azimuthal correlation measurements implying that
 \begin{center}
 \includegraphics[width=0.85\textwidth]{figures/theory/overlap}
 \caption{Schematic diagrams of the initial overlap region (left) and the final spatial anisotropy generated (right).
-Taken from \cite{RevModPhys.90.025005}.}
+Taken from Ref.~\cite{RevModPhys.90.025005}.}
 \label{fig:overlap}
 \end{center}
 \end{figure}
@@ -113,7 +115,7 @@ Figure taken from Ref.~\cite{Voloshin:2008dg}.}
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[width=0.45\textwidth]{figures/theory/flow_coefficients}
-\caption{Comparison of a hydrodynamic model from \cite{Niemi:2015qia} to anisotropy measurements by ALICE \cite{ALICE:2011ab} for different parameterizations of $\eta / s $ and for different $v_n$, {\it{n}} = 2, 3, 4 from top to bottom, as a function of collision centrality.
+\caption{Comparison of a hydrodynamic model from Ref.~\cite{Niemi:2015qia} to anisotropy measurements by ALICE \cite{ALICE:2011ab} for different parameterizations of $\eta / s $ and for different $v_n$, {\it{n}} = 2, 3, 4 from top to bottom, as a function of collision centrality.
 Figure taken from Ref.~\cite{Busza:2018rrf}.}
 \label{fig:flow_coeff}
 \end{center}
