--- a/qualification.tex
+++ b/qualification.tex
@@ -169,7 +169,7 @@ The subtracted energy is seen to be independent of the jet\ \Et \
 A summary of the differences between the EMTopo and HI jet reconstruction methods is given in Table \ref{table:algo_diff}.
 \begin{table}[h]
 \centering
-\caption{A summary of the differences between the EMTopo and HI jet reconstruction algorithm. Adapted from \cite{HIjesnote}.}
+\caption{A summary of the differences between the EMTopo and HI jet reconstruction algorithm. Adapted from Ref.~\cite{HIjesnote}.}
 \begin{tabular}{|c|c|c|}
 \hline
             & EMTopo                 & HI                           \\ \hline
