--- a/setup.tex
+++ b/setup.tex
@@ -34,7 +34,7 @@ The final stripping of lead ions takes place after the PS, on a 0.8 mm thin alum
 	\includegraphics[width=0.8\textwidth]{figures/setup/cern.jpg} %
 	\caption{The accelerator complex at CERN.
 ATLAS can be seen inside the SPS on the LHC ring.
-Figure taken from Ref.~\cite{Christiane:1260465}.}
+Figure from Ref.~\cite{Christiane:1260465}.}
 	\label{fig:cern}%
 \end{figure}
 
@@ -69,7 +69,7 @@ The detector was designed keeping in mind the goals of the physics it aimed to e
 	\centering
 	\includegraphics[width=0.7\textwidth]{figures/setup/atlas.pdf}
 	\caption{The ATLAS detector.
-Figure taken from Ref.~\cite{Aad:2008zzm}.}	
+Figure from Ref.~\cite{Aad:2008zzm}.}	
 	\label{fig:atlas}
 \end{figure}
 
@@ -93,7 +93,7 @@ Each stave consists of 26880 pixels in a matrix of 80 columns (50 $\mu$m pitch),
 The other three layers layers have a pixel size in $\rphi \times z$ of $50 \times 400 \mu \mathrm{m}^2$.
 The accuracies in the barrel region are $10 \mu \mathrm{m}^2$ (\rphi) and $115 \mu \mathrm{m}^2 (z)$.
 The end cap regions have an accuracy of $10 \mu \mathrm{m}^2 (\rphi) $ and $115 \mu \mathrm{m}^2 (R)$.
-The hit resolution ranges from $\sim$ 8 (\rphi) and $\sim$ 40$\mu$m) ($z$) for the innermost layer, to $\sim$ 10 $\mu$m (\rphi) and $\sim$ 115$\mu$m ($z$) for the next three layers \cite{Aad:2008zzm}.
+The hit resolution ranges from $\sim$8 (\rphi) and $\sim$40$\mu$m) ($z$) for the innermost layer, to $\sim$10 $\mu$m (\rphi) and $\sim$115$\mu$m ($z$) for the next three layers \cite{Aad:2008zzm}.
 The pixel detector has approximately 80.4 million readout channels.
 
 
@@ -101,12 +101,12 @@ The pixel detector has approximately 80.4 million readout channels.
 The SCT has eight strip (80 $\mu$m pitch) layers that are crossed by each track.
 Small angle stereo strips (40 mrad) are used to measure both coordinates, with one set of strips in each layer, parallel to the beam direction.
 The end cap region has nine layers of double sided modules with strips in the radial direction, with each also having a mean pitch of 80 $\mu$m.
-The intrinsic resolution is $\sim$ 17$\mu$m (\rphi) and $\sim$ 580$\mu$m ($z$).
+The intrinsic resolution is $\sim$17$\mu$m (\rphi) and $\sim$580$\mu$m ($z$).
 There are approximately 6.3 million readout channels from the SCT \cite{Aad:2008zzm}.
 
 
 \subparagraph{Transition Radiation Tracker:} The TRT uses a combination of a xenon based gas and 4mm diameter straw tubes and provides for a large number of hits (up to 36) per track.
-It covers the region $|\eta| <  2.0$, and has a resolution of $\sim$ 130$\mu$m in $r-\phi$, with no information in the $z$ direction.
+It covers the region $|\eta| <  2.0$, and has a resolution of $\sim$130$\mu$m in $r-\phi$, with no information in the $z$ direction.
 The barrel region of the TRT has straws that are 144 cm long and are parallel to the beam axis, with the wires divided into two halves at $\eta = 0$.
 The end-caps have 37 cm long straws in a radial configuration.
 The TRT has approximately 315,000 channels \cite{Aad:2008zzm}.
@@ -116,7 +116,7 @@ The TRT has approximately 315,000 channels \cite{Aad:2008zzm}.
 	\centering
         \includegraphics[width=0.7\textwidth]{figures/setup/inner_det.png}
           \caption{ATLAS Inner Detector System.
-          Figure taken from Ref.~\cite{Potamianos:2209070}.}
+          Figure from Ref.~\cite{Potamianos:2209070}.}
           \label{fig:inner_det}
 \end{figure}
 
@@ -164,7 +164,7 @@ A summary of the depth of the calorimeter in terms of the interaction lengths, a
 	\centering
         \includegraphics[width=0.7\textwidth]{figures/setup/interaction_lengths}
           \caption{Cumulative material in the calorimeter system in units of hadronic interaction length as a function of $|\eta|$.
-          Figure taken from Ref.~\cite{Aad:2008zzm}.}
+          Figure from Ref.~\cite{Aad:2008zzm}.}
           \label{fig:interaction_lenghts}
 \end{figure}
 
@@ -183,7 +183,7 @@ The transition and end-cap have chambers perpendicular to the beam axis.
 \subsection{Other subsystems}
 Other major subsystems of the ATLAS detector include the Zero Degree Calorimeter (ZDC), the trigger system
 
-\subsubsection{ZDC}
+\subparagraph{ZDC: }
 The zero degree calorimeter plays a key role in determining the centrality of heavy ion collisions.
 It consists of quartz rods and tungsten plates, and measures neutral particles at $|\eta| >= 8.2$.
 It is made of four modules, one electromagnetic, and three hadronic.
@@ -191,7 +191,7 @@ The Modules are made of 11 tungsten plates that are perpendicular to the beam di
 Photomultiplier tubes are used to detect the Cherenkov radiation from particle showers.
 
 
-\subsubsection{Trigger System}
+\subparagraph{Trigger System: }
 The trigger and data acquisition system (TDAQ) have different subsystems that are associated with sub-detectors.
 There are three distinct levels: L1, L2, and the event filter.
 The latter two form the High Level Trigger (HLT) system.
