--- a/theory.tex
+++ b/theory.tex
@@ -6,13 +6,13 @@ It will discuss the fundamentals of quantum chromodynamics (QCD), the quark gluo
 \label{sec:qcd}
 \input{qcd.tex}
 
-\section{Quark-Gluon Plasma}
-\label{sec:qgp}
-\input{qgp.tex}
+\section{Quark-Gluon Plasma in Heavy Ion Collisions}
+\label{sec:qgp_hi}
+\input{qgp_hi.tex}
 
-\section{Heavy Ion Collisions}
-\label{sec:HICollisions}
-\input{hicollisions.tex}
+%\section{Heavy Ion Collisions}
+%\label{sec:HICollisions}
+%\input{hicollisions.tex}
 
 \section{Jets and Jet Quenching}
 \label{sec:jets}
