--- a/qcd.tex
+++ b/qcd.tex
@@ -8,7 +8,7 @@ It is part of the Standard Model \cite{Gaillard:1998ui}, the building blocks of 
 \begin{center}
 \includegraphics[width=0.5\textwidth]{figures/theory/SM}
 \caption{The elementary particles of the standard model.
-Figure taken from Ref.~\cite{SMpict}.}
+Figure from Ref.~\cite{SMpict}.}
 \label{fig:sm_particles}
 \end{center}
 \end{figure}
@@ -19,7 +19,7 @@ Quarks are fermions with a spin of $1/2$, and carry a fractional electric charge
 They all have mass and come in six flavors: up, down, strange, charm, top, bottom.
 The lightest quarks (u and d) combine and form stable particles, while the heavier quarks can only be produced in energetic environments and decay rapidly.
 Gluons are gauge bosons (force carriers) with a spin of $1$, and are what hold quarks together.
-The dynamics of the quarks and gluons, collectively referred to as partons are described by the QCD Lagrangian given by \cite{Beringer:1481544}:
+The dynamics of the quarks and gluons, collectively referred to as partons, are described by the QCD Lagrangian given by \cite{Beringer:1481544}:
 
 \begin{align}
 \mathcal{{L}}_{\mathrm{QCD}} = \sum_q \bar{\psi}_{q,a} (i \gamma^\mu \partial_\mu \delta_{ab} - g_s \gamma^\mu t_{ab}^C \mathcal{A}_\mu^C - m_q \delta_{ab}) \psi_{q,b} - \frac{1}{4} F_{\mu\nu}^A F^{A \mu\nu}
@@ -34,28 +34,18 @@ The field tensor $F_{\mu\nu}^A$ can be written in terms of the structure constan
 F_{\mu\nu}^A = \partial_\mu \mathcal{A}_\nu^A - \partial_\nu \mathcal{A}_\mu^A - g_s f_{ABC} \mathcal{A}^B \mathcal{A}^C
 \end{align}
 While many parallels can be drawn between Quantum Electrodynamics (QED, the theory that describes photons and electrons) and QCD, the main difference between the two comes from the gluon-gluon interactions allowed in QCD, making it non-Abelian.
-These interactions can be summarized as shown in Figure \ref{fig:qcd_diagrams}.
+These interactions can be summarized as shown in Figure~\ref{fig:qcd_diagrams}.
 
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[width=0.8\textwidth]{figures/theory/qcd_diagrams}
 \caption{The allowed vertices in QCD.
-The vertices involving two or more gluons are unique to QCD and do not have a QED analog.}
+The vertices involving three or four gluons are unique to QCD and do not have a QED analog.}
 \label{fig:qcd_diagrams}
 \end{center}
 \end{figure}
 
 A core feature of QCD is that the coupling constant \alphas\ has an energy dependence shown in Figure~\ref{fig:running_coupling}.
-
-\begin{figure}[htbp]
-\begin{center}
-\includegraphics[width=0.5\textwidth]{figures/theory/running_coupling}
-\caption{The running coupling constant $\alpha_s$ as a function of the momentum transfer $Q$.
-Figure taken from Ref.~\cite{Beringer:1481544}.}
-\label{fig:running_coupling}
-\end{center}
-\end{figure}
-
 This dependence can be expressed in terms of the $\beta$ function as
 
 \begin{align}
@@ -72,9 +62,19 @@ where the coefficients $b_i$ depend on the number of colors and flavors.
 This running coupling constant is small and asymptotically tends to zero at large energy scales (or at small distances) and is large at small energy scales (large distances).
 This running coupling phenomenon leads to two key behaviors: asymptotic freedom and color confinement.
 
+\begin{figure}[htbp]
+\begin{center}
+\includegraphics[width=0.5\textwidth]{figures/theory/running_coupling}
+\caption{The running coupling constant $\alpha_s$ as a function of the momentum transfer $Q$.
+Figure from Ref.~\cite{Beringer:1481544}.}
+\label{fig:running_coupling}
+\end{center}
+\end{figure}
+
+
 
 \subparagraph{Asymptotic Freedom: }
-At high energy scales (small distances), the QCD coupling constant $\alpha_s$ is small and tends to zero, implying a free particle behavior of quarks and gluons\cite{PhysRevLett.30.1343, PhysRevD.8.3633}.
+At high energy scales (small distances), the QCD coupling constant $\alpha_s$ is small and tends to zero, implying a free particle behavior of quarks and gluons \cite{PhysRevLett.30.1343, PhysRevD.8.3633}.
 This has been observed by a variety of deep inelastic scattering (DIS) experiments \cite{Deur:2014vea, Kim:1998kia, Altarelli:1996nm, RevModPhys.63.597, Kataev:2001kk, Alekhin:2012ig, Alekhin:2013nua, Blumlein:2006be, Aaron:2007xx, Chekanov:2007pa, Chekanov:2008af, Abramowicz:2010cka, Abramowicz:2010ke, Aaron:2009vs}.
 These scattering experiments shown in Figure~\ref{fig:dis_schematic}, probe the interior of a nucleon using highly energetic leptons like electrons.
 The electron scatters off of the target proton, producing a lepton and a hadron shower.
@@ -92,7 +92,7 @@ These experiments revealed the point-like constituents of the proton and paved t
 
 \subparagraph{Color Confinement}
 The opposite end of the running coupling constant phenomenon is color confinement.
-Proved to be a consequence of asymptotic freedom in Ref~\cite{Nishijima1996}, this property of QCD described in Ref.~\cite{PhysRevD.10.2445} forbids the direct observation of free quarks and gluons, allowing only for composite particles that are color singlets.
+Proved to be a consequence of asymptotic freedom in Ref.~\cite{Nishijima1996}, this property of QCD described in Ref.~\cite{PhysRevD.10.2445} forbids the direct observation of free quarks and gluons, allowing only for composite particles that are color singlets.
 While have been numerous efforts to understand the source of this phenomenon like in Refs.~\cite{BUCHMULLER1982479, KOGUT1976199, PhysRevD.31.2910, PhysRevD.57.2603, PhysRevD.62.114503, RevModPhys.55.775, PhysRevLett.90.102001}, these are based on numerical calculations.
 An analytic proof of color confinement still escapes description and in fact, is one of the Millennium Problems \cite{MillenniumProb}.
 
